--- a/merrick-js-v1/assets/css/style.css
+++ b/merrick-js-v1/assets/css/style.css
@@ -274,80 +274,122 @@ p {
 	display: flex;
 }
 
-
-.citrus_pureBites_carousel{
-    overflow-x: hidden;
-    position: relative;
-    display: flex;
+.citrus_purebits__slider input {
+	display: none;
 }
 
-.citrus_pureBites_carousel-inner{
-
-    display: flex;
-    transition: all ease .5s;
+.citrus_purebits_slide {
+	min-width: 100%;
+	/* transition: 2s;
+	-webkit-transition: 2s;*/
 }
 
-.citrus_pureBites_carousel-item{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+/* Manual navigation */
+.citrus_purebitsnavigation-manual {
+	position: absolute;
+	width: 100%;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	bottom: 0;
+	padding: 10px 0 10px;
+	width: 80px;
+	left: 51.5%;
+	-webkit-transform: translateX(-51.5%);
+	    -ms-transform: translateX(-51.5%);
+	        transform: translateX(-51.5%);
 }
 
-.citrus_pureBites_carousel-controls .prev{
-    display: inline-block;
-    height: 32px;
-    width: 32px;
-    position: absolute;
-    left: 12px;
-    top: 50%;
-    transform: translateY(-50%);
-    background-position: center;
-    background-size: auto 100%;
-    background-repeat: no-repeat;
-    cursor: pointer;
-    opacity: .5;
-}
-
-.citrus_pureBites_carousel-controls .next{
-    display: inline-block;
-    height: 32px;
-    width: 32px;
-    position: absolute;
-    right: 12px;
-    top: 50%;
-    transform: translateY(-50%);
-    background-position: center;
-    background-size: auto 100%;
-    background-repeat: no-repeat;
-    cursor: pointer;
-    opacity: .5;
-}
-
-.prev:hover, .next:hover{
-    opacity: 1;
-}
-
-.citrus_pureBites_carousel-indicators{
-    position: absolute;
-    bottom: 0;
-    left: calc(100%/2 - 40px);
-    text-align: center;
-	background: rgba(255, 255, 255, 0.8);
-	border-radius: 5px 5px 0 0;
-	padding: 10px 10px 5px;
-}
-
-.citrus_pureBites_carousel-indicators span{
-    display: inline-block;
+.citrus_purebitsmanual-btn {
 	border: 2px solid #09205c;
-    padding: 8px;
-    border-radius: 20px;
-    cursor: pointer;
-    margin: 0 5px;
+	padding: 5px;
+	border-radius: 10px;
+	cursor: pointer;
+	-webkit-transition: 1s;
+	-o-transition: 1s;
+	transition: 1s;
 }
 
-.citrus_pureBites_carousel-indicators span.active{
-	background-color: #09205c;
+.citrus_purebitsmanual-btn:not(:last-child) {
+	margin-right: 10px;
+}
+
+.citrus_purebitsmanual-btn:hover {
+	background: #09205c;
+}
+
+#radio1:checked ~ .citrus_purebits_first {
+	margin-left: 0;
+}
+#radio2:checked ~ .citrus_purebits_first {
+	margin-left: -100%;
+	-webkit-transition: 2s;
+	-o-transition: 2s;
+	transition: 2s;
+}
+#radio3:checked ~ .citrus_purebits_first {
+	margin-left: -200%;
+	-webkit-transition: 2s;
+	-o-transition: 2s;
+	transition: 2s;
+}
+#radio4:checked ~ .citrus_purebits_first {
+	margin-left: -300%;
+	-webkit-transition: 2s;
+	-o-transition: 2s;
+	transition: 2s;
+}
+
+.citrus_purebitsnavigation-auto {
+	position: absolute;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	bottom: 0;
+	background: rgba(255, 255, 255, 0.8);
+	padding: 10px 0 10px;
+	width: 80px;
+	left: 51.5%;
+	-webkit-transform: translateX(-51.5%);
+	    -ms-transform: translateX(-51.5%);
+	        transform: translateX(-51.5%);
+	border-radius: 5px 5px 0 0;
+}
+
+.citrus_purebitsnavigation-auto img {
+	width: 16px;
+	position: absolute;
+	margin: 0 0 0 -96px;
+	bottom: 9px;
+}
+
+.citrus_purebitsnavigation-auto div {
+	border: 2px solid #09205c;
+	padding: 5px;
+	border-radius: 10px;
+	-webkit-transition: 1s;
+	-o-transition: 1s;
+	transition: 1s;
+}
+
+.citrus_purebitsnavigation-auto div:not(:last-child) {
+	margin-right: 10px;
+}
+
+#radio1:checked ~ .citrus_purebitsnavigation-auto .citrus_purebitsauto-btn1 {
+	background: #09205c;
+}
+#radio2:checked ~ .citrus_purebitsnavigation-auto .citrus_purebitsauto-btn2 {
+	background: #09205c;
+}
+#radio3:checked ~ .citrus_purebitsnavigation-auto .citrus_purebitsauto-btn3 {
+	background: #09205c;
 }
 
 /****slider styles****/
@@ -374,7 +416,6 @@ p {
 	width: 100%;
 	height: auto;
 }
-
 .citrus_purebits_slider-content > h1 {
 	font-family: "PetcoCircularTT-Bold", arial !important;
 	font-weight: bold;
@@ -389,7 +430,7 @@ p {
 	color: #fff;
 	font-size: 16px;
 	font-weight: 400;
-	padding-bottom: 20px;
+	padding-bottom: 40px;
 	display: block;
 	width: 87%;
 	margin: 0 auto;
@@ -845,7 +886,7 @@ p {
 
 @media (min-width: 768px) and (max-width: 1299px) {
 	.citrus_purebits_slider-content > h1 {
-			font-size: 17px !important;
+			font-size: 17px;
 			padding-bottom: 5px;
 	}
 	.citrus_purebits_banner-slider-img {
@@ -889,12 +930,6 @@ p {
 	.citrus_purebits_page-booked_container {
 			max-width: 90%;
 	}
-	.citrus_purebits_slider-content > h1 {
-		font-size: 20px;
-	}
-	.citrus_purebits_slider-content > p {
-		font-size: 14px;
-	}
 }
 
 @media all and (max-width: 991px) {
@@ -917,27 +952,27 @@ p {
 	}
 
 	.citrus_purebits_dog_item {
-		text-align: center;
-		flex: 0 0 50%;
-	}
+    text-align: center;
+    flex: 0 0 50%;
+}
 	.citrus_purebits_dog_main_flex {
 		width: 100%;
     overflow-x: auto;
 		justify-content: start;
 	}
 	.citrusPurebite21_show {
-		display: block;
-		width: 150%;
-		overflow: hidden;
-	}
+    display: block;
+    width: 150%;
+    overflow: hidden;
+}
 
 
 
-	.citrus_purebits_dog_inner__content-item {
-		overflow-x: auto;
-		width: 100%;
-		justify-content: start;
-	}
+.citrus_purebits_dog_inner__content-item {
+	overflow-x: auto;
+	width: 100%;
+	justify-content: start;
+}
 	/* Hide scrollbar for Chrome, Safari and Opera */
 	.citrus_purebits_dog_inner__content-item::-webkit-scrollbar {
 			display: none;
@@ -967,13 +1002,6 @@ p {
 			padding-bottom: 0;
 			padding-top: 30px;
 	}
-	.citrus_pureBites_carousel-indicators{
-		left: calc(100%/2 - 45px);
-	}
-	.citrus_purebits_slider-content > p {
-		font-size: 12px;
-		width: 45%;
-	}
 }
 
 @media all and (max-width: 767px) {
@@ -991,10 +1019,6 @@ p {
 			        transform: translate(-56.5%, -60%);
 			top: 60%;
 	}
-	.citrus_pureBites_carousel-indicators {
-		left: calc(100%/2 - 55px);
-	}
-
 	.citrus_purebits_common-slider-btn {
 			-webkit-box-orient: vertical;
 			-webkit-box-direction: normal;
@@ -1065,17 +1089,6 @@ p {
 			display: none;
 	}
 
-	.citrus_purebits_slider-content > h1 {
-		font-size: 24px;
-		padding: 0 20px 15px;
-
-	}
-	.citrus_purebits_slider-content > p {
-		font-size: 14px;
-		width: 100%;
-		padding: 0 20px 30px;
-	}
-
 
 }
 
@@ -1086,6 +1099,14 @@ p {
 			    -ms-transform: translate(-56.5%, -85%);
 			        transform: translate(-56.5%, -85%);
 			top: 85%;
+	}
+	.citrus_purebits_slider-content > p {
+			width: 71%;
+			padding-bottom: 20px;
+	}
+	.citrus_purebits_slider-content > h1 {
+			width: 75%;
+			margin: 0 auto;
 	}
 	.citrus_purebits_single_banifit p {
 			width: 70%;
